Part 2 of refactor